# gfaas-templates

./: xfaas.yml
core-go1.19/: README.md  core.go  go.mod  test.go
core-java19/: README.md  build.gradle
core-node14/: README.md  index.js  package.json
core-python3.9/: .pip-api-token  README.md
function-cpp20/: Dockerfile  function.yml  main.cpp
function-go1.19/: function.yml  go.sum
function-grpc-go1.19/: README.md  function.yml  go.mod  go.sum
function-grpc-java19/: Dockerfile  build.gradle  function.yml
function-grpc-node14/: README.md  function.yml  package.json
function-grpc-python3.9/: Dockerfile  README.md  function.proto  function.yml  function_pb2.py  function_pb2_grpc.py
function-java19/: Dockerfile  README.md  build.gradle  function.yml  settings.gradle
function-node14/: Dockerfile  function.js  function.yml
function-python3.9/: .dockerignore  README.md  function.yml  requirements.txt
gfaas-function-grpc-go1.19/: client.go  function.go  function.pb.go  function.proto  function_grpc.pb.go  server.go
gfaas-function-grpc-node14/: Dockerfile  client.js  package-lock.json  server.js
gfaas-function-grpc-python3.9/: client.py  function.py  function.yml  function_pb2.pyi  requirements.txt  server.py
xfaas-function-cpp20/: CMakeLists.txt  Dockerfile  README.md  function.h  function.yml  main.cpp  xserver.cpp  xserver.h
xfaas-function-cpp20/function/: function.cpp  function.h
xfaas-function-cpp20/info/: info.cpp  info.h
xfaas-function-cpp20/server/: xserver.cpp  xserver.h
xfaas-function-cpp20/xfaas-cpp-httplib/: httplib.h
(+104 files in other folders)
